# ollyfc

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: mem.rs  usb_serial.rs
hardware/: README.md
hardware/board/: NEO-M9N-00B.step  fp-info-cache  fp-lib-table  ollyfc.kicad_prl  ollyfc.kicad_pro  ollyfc.kicad_sch  ollyfc.xml  power.kicad_sch  sensor.kicad_sch  sensor.kicad_sch-bak
hardware/board/ollyfc.symbols/: MAX17044G_U.kicad_sym  NEO-M9N-00B.kicad_sym
hardware/board/production/: designators.csv  netlist.ipc  positions.csv
hardware/board/production/ollyfc_v2/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/symbols/: ofc_sym.bak  ofc_sym.kicad_sym
hardware/symbols/ofc_sym.3dshapes/: LED0603-R-RD_WHITE.wrl  RF-SMD_FRF05002-JSS103M.wrl  SON-8_L3.0-W3.0-H1.0-P0.65.wrl  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL-1.wrl  TSSOP-28_L9.7-W4.4-H1.0-LS6.4-P0.65.wrl
hardware/symbols/ofc_sym.pretty/: C0402.kicad_mod  IDC-SMD_10P-P1.27_X1270WVS-2X05B-6TV01.kicad_mod  LED0603-R-RD_WHITE.kicad_mod  LED0603-RD-YELLOW.kicad_mod  LED0603-RD.kicad_mod  LED0805-R-RD.kicad_mod  LGA-12_L2.0-W2.0-P0.50-BL.kicad_mod  LGA-16_L4.5-W3.0-P0.50-BL.kicad_mod  OSC-SMD_4P-L3.2-W2.5-BL.kicad_mod  R0603.kicad_mod  RF-SMD_FRF05002-JSS103M.kicad_mod  SENSORM-SMD_BMP388.kicad_mod  SON-8_L3.0-W3.0-P0.65-LS3.0-BL-EP.kicad_mod  SOT-223-3_L6.5-W3.4-P2.30-LS7.0-BR.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL-1.kicad_mod  TSSOP-28_L9.7-W4.4-P0.65-LS6.4-TL.kicad_mod  USB-C_SMD-TYPE-C-31-M-12.kicad_mod
hardware/v1/: _autosave-ollyfc.kicad_pcb  fp-lib-table  ollyfc.kicad_pcb  ollyfc.kicad_prl  ollyfc.kicad_pro  ollyfc.kicad_sch  power.kicad_sch  sensor.kicad_sch  sym-lib-table  ~ollyfc.kicad_pcb.lck
hardware/v1/ollyfc.pretty/: 21-0174B_MXM-L.kicad_mod  21-0174B_MXM-M.kicad_mod  21-0174B_MXM.kicad_mod  BMP-388-PQFN50P200X200X80-10N.kicad_mod  BMX-160-PQFN50P250X300X100-14N.kicad_mod  OSC_X322516MLB4SI.kicad_mod  PQFN50P450X300X100-16N.kicad_mod  PW0008A_M.kicad_mod  XCVR_NEO-M9N-00B.kicad_mod  XDCR_CMT-9648-85T.kicad_mod
hardware/v1/ollyfc.symbols/: TPS2113A.kicad_sym
hardware/v1/production/: bom.csv
hardware/v1/production/ollyfc_2024-02-07_21-10-35/: bom.csv  netlist.ipc
hardware/v3/ofc_v3/: fp-info-cache  io.kicad_sch  ofc_v3.kicad_pcb  ofc_v3.kicad_prl  ofc_v3.kicad_pro  ofc_v3.kicad_sch  power.kicad_sch
hardware/v3/ofc_v3/production/V3_BOARD/: bom.csv  designators.csv  netlist.ipc  positions.csv
host/: bun.lockb  package.json  vite.config.js
host/src/: app.html  global.scss
host/src-tauri/: Cargo.toml  tauri.conf.json
host/src-tauri/src/: main.rs  usb.rs
host/src/lib/: connectionStore.ts  settingsStore.ts  usb.ts
host/src/routes/: +layout.svelte  +page.svelte
host/src/routes/calibration/: +page.svelte
host/src/routes/configuration/: +page.svelte
host/src/routes/flightlogs/: +page.svelte
host/src/routes/settings/: +page.svelte  DarkModeToggle.svelte
host/src/routes/usb/: +page.svelte  Connect.svelte  SelectedUsbDevice.svelte  UsbDevices.svelte
ollyfc/: Cargo.toml  Embed.toml  memory.x
ollyfc/.cargo/: config.toml
ollyfc/examples/: README.md  bbu-bmi088.rs  bbu-bmp388.rs  bbu-lis3mdl.rs  bmp388.rs  buzzer.rs  hdc-1080.rs  i2c.rs  imu.rs  led.rs  lis3mdl.rs  mem.rs  pca9685.rs  sbus.rs  sensor.rs  usb.rs  usb_serial.rs  v1bringup.rs  w25q.rs
ollyfc/src/: flight_control.rs  flight_logger.rs  gyro.rs  lib.rs  main.rs  sbus.rs  sensor.rs  usb.rs  w25q.rs  xfer_protoc.rs
ollyfc/src/err/: log.rs
ollyfc/src/io/: mod.rs  sbus.rs
ollyfc/src/logger/: flight_log.rs  mod.rs
ollyfc/src/pwm/: mod.rs  servo.rs
ollyfc/src/sbus/: mod.rs
ollyfc/src/sensor/: imu.rs  mod.rs  pressure.rs
ollyfc/src/usb/: protocol.rs
ollyfc_common/: Cargo.toml
ollyfc_common/src/: cmd.rs  lib.rs  log.rs  msg.rs  protoc.rs
ollyfc_host/: Cargo.toml  README.md  bun.lockb  index.html  package.json
ollyfc_host/src/: App.svelte  main.rs  styles.css  usb.rs
ollyfc_host/src-tauri/: Cargo.toml  tauri.conf.json
ollyfc_host/src-tauri/icons/: icon.icns
ollyfc_host/src-tauri/src/: main.rs  usb.rs  utils.rs  xfer_protoc.rs
ollyfc_host/src/lib/: DeviceCmd.svelte  DeviceIO.svelte  Dump.svelte  Progress.svelte  UsbState.svelte  appTypes.ts  flightTypes.ts  usb_state.ts  utils.ts
src/: flight_control.rs  flightlogger.rs  lib.rs  main.rs  sbus.rs  w25q.rs
