[package]
authors = ["Mike Sutherland <msutherland@fastmail.com"]
edition = "2021"
name = "ollyfc"
version = "0.1.0"

[dependencies]
defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = {version = "0.3", features = ["print-defmt"]}
rtic-monotonic = "1.0.0"

[dependencies.rtic]
features = ["thumbv7-backend"]
version = "2.0.1"

[dependencies.rtic-sync]
version = "1.0.2"

[dependencies.rtic-monotonics]
features = ["cortex-m-systick"]
version = "1.1.0"

[dependencies.stm32f4xx-hal]
features = ["stm32f411", "rtic"]
version = "0.17.1"

[dependencies.mpu6050-dmp]
path = "../mpu6050-dmp-rs"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = "s"
overflow-checks = true
