[package]
authors = ["Mike Sutherland <msutherland@fastmail.com"]
edition = "2021"
name = "ollyfc"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"

defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = {version = "0.3", features = ["print-defmt"]}

rtic = { version="2.0.1", features = ["thumbv7-backend"]}
rtic-sync ={ version="1.0.2"}
rtic-monotonics = {version="=1.0.0-alpha.2", features = ["cortex-m-systick"]}
rtic-monotonic = "1.0.0"

stm32f4xx-hal = { version = "0.18.0", features = ["stm32f411", "rtic"]}
mpu6050-dmp = { git= "https://github.com/barafael/mpu6050-dmp-rs.git"}


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = "s"
overflow-checks = true
