[package]
authors = ["Mike Sutherland <msutherland@fastmail.com"]
edition = "2021"
name = "ollyfc"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"

defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "1"
embedded-hal-bus = "0.2"

rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.5", features = ["cortex-m-systick"] }
rtic-monotonic = "1.0.0"

# Peripherals
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal.git", features = [
    "stm32f401",
    "usb_fs",
    "rtic2",
] }
libm = "0.2.8"
usbd-serial = { version = "0.2.0" }
usb-device = { version = "0.3.1" }
crc32fast = { version = "1.3", default-features = false }

# Sensors
embedded-hdc1080-rs = { git = "https://github.com/rhomber/hdc1080-embedded-rs" }
lis3mdl = { git = "https://github.com/ryanrightmer/lis3mdl.git", rev = "b738822" }
bmp388 = { git = "https://github.com/rland93/bmp388.git", branch = "master", features = [
    "config-builder",
] }
bmi088 = { git = "https://github.com/rland93/bmi088-rs.git", branch = "main" }
w25q = { git = "https://github.com/rland93/w25q-rs.git", branch = "main", features = [
    "defmt",
] }

# io
embedded-io = "0.6.1"
pwm-pca9685 = "1.0"
# Internal
ollyfc_common = { path = "../ollyfc_common", features = ["no_std"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = "s"
overflow-checks = true
