[package]
name = "ollyfc_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
csv = {version="1.1", optional = true}

[features]
no_std = ["defmt"]
std = ["serde_json", "serde", "csv"]