[package]
name = "ollyfc_common"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = ["dep:crc32fast", "dep:serde", "dep:serde_json", "dep:csv"]
no_std = ["dep:defmt"]

[dependencies]
crc32fast = { version = "1.4", optional = true }
defmt = { version = "0.3.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
csv = { version = "1.1", optional = true }
static_assertions = "1.1.0"
